--- a/hd-dbscan-ext/packages/inspector/src/inspector/inspector.html
+++ b/hd-dbscan-ext/packages/inspector/src/inspector/inspector.html
@@ -10,20 +10,20 @@
   </style>
 </head>
 
-<body style="width:200px; height:100px;">
+<body>
   <h3>High-Dimensional DBSCAN</h3>
   <label for="inpTitle">Page Title</label><br />
   <input type="text" id="inpTitle" name="inptitle" value="" style="display:block;width:98%;" /><br />
   <button id="btnClt">Collect</button>&nbsp;<button id="btnSave">Save</button><br />
-  <table id="tblComps" style="width:100%">
+  <table id="tblComps" style="width:990px">
     <caption> Page Components </caption>
     <thead>
       <tr>
-        <th>Selector</th>
-        <th>ClassNames</th>
-        <th>Text</th>
-        <th>ClientRect</th>
-        <th>Select</th>
+        <th style="width:30%;">Selector</th>
+        <th style="width:20%;">ClassNames</th>
+        <th style="width:20%;">Text</th>
+        <th style="width:25%;">ClientRect</th>
+        <th style="width:100px;">Select</th>
       </tr>
     </thead>
     <tbody></tbody>
