--- a/hd-dbscan-ext/packages/inspector/src/inspector/inspector.html
+++ b/hd-dbscan-ext/packages/inspector/src/inspector/inspector.html
@@ -7,6 +7,35 @@
   <meta charset="UTF-8">
   <title>High-Dimensional DBSCAN</title>
   <style>
+    table {
+      border-collapse: collapse;
+      /* Merges table borders */
+      width: 100%;
+      margin: 0 0 0 0;
+    }
+
+    th,
+    td {
+      border: 1px solid #333;
+      padding: 2px;
+      text-align: left;
+    }
+
+    tbody tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+
+    tbody tr:hover {
+      background-color: #ddd;
+      cursor: pointer;
+    }
+
+    .feature {
+      display: "block";
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   </style>
 </head>
 
@@ -15,15 +44,15 @@
   <label for="inpTitle">Page Title</label><br />
   <input type="text" id="inpTitle" name="inptitle" value="" style="display:block;width:98%;" /><br />
   <button id="btnClt">Collect</button>&nbsp;<button id="btnSave">Save</button><br />
-  <table id="tblComps" style="width:990px">
+  <table id="tblComps">
     <caption> Page Components </caption>
     <thead>
       <tr>
-        <th style="width:30%;">Selector</th>
-        <th style="width:20%;">ClassNames</th>
-        <th style="width:20%;">Text</th>
-        <th style="width:25%;">ClientRect</th>
-        <th style="width:100px;">Select</th>
+        <th>Selector</th>
+        <th>ClassNames</th>
+        <th>Text</th>
+        <th>ClientRect</th>
+        <th>Select</th>
       </tr>
     </thead>
     <tbody></tbody>
