--- a/hd-dbscan-ext/packages/inspector/src/inspector/inspector.html
+++ b/hd-dbscan-ext/packages/inspector/src/inspector/inspector.html
@@ -43,7 +43,7 @@
   <h3>High-Dimensional DBSCAN</h3>
   <label for="inpTitle">Page Title</label><br />
   <input type="text" id="inpTitle" name="inptitle" value="" style="display:block;width:98%;" /><br />
-  <button id="btnClt">Collect</button>&nbsp;<button id="btnSave">Save</button><br />
+  <button id="btnClt">Collect</button>&nbsp;<button id="btnSave">Save</button>&nbsp;<span id="msg-viewer"></span><br />
   <table id="tblComps">
     <caption> Page Components </caption>
     <thead>
@@ -52,6 +52,7 @@
         <th>ClassNames</th>
         <th>Text</th>
         <th>ClientRect</th>
+        <th>Major</th>
         <th>Select</th>
       </tr>
     </thead>
