좌표는 left, top 따로 취급하는 것이 아닌 합쳐서 취급해야 함

--- a/hd-dbscan-ext/packages/inspector/src/inspector/inspector.html
+++ b/hd-dbscan-ext/packages/inspector/src/inspector/inspector.html
@@ -42,7 +42,7 @@
 <body>
   <h3>High-Dimensional DBSCAN</h3>
   <label for="inpTitle">Page Title</label><br />
-  <input type="text" id="inpTitle" name="inptitle" value="" style="display:block;width:98%;" /><br />
+  <input type="text" id="inpTitle" name="inpTitle" value="" style="display:block;width:98%;" /><br />
   <button id="btnClt">Collect</button>&nbsp;<button id="btnSave">Save</button>&nbsp;<span id="msg-viewer"></span><br />
   <table id="tblComps">
     <caption> Page Components </caption>
